--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.8.20",
     "core-js": "^3.6.5",
     "cytoscape": "^3.15.2",
     "cytoscape-dagre": "^2.2.2",
