--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-cytoscape": "^1.0.8"
+    "cytoscape": "^3.15.2",
+    "cytoscape-dagre": "^2.2.2",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
