--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "buefy": "^0.8.20",
+    "bulma-dashboard": "^0.3.1",
     "core-js": "^3.6.5",
     "cytoscape": "^3.15.2",
     "cytoscape-dagre": "^2.2.2",
