--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "demo",
+  "name": "frontend-graph-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "cp ../api/api.yaml ./src/api/api.yaml && vue-cli-service serve",
+    "build": "cp ../api/api.yaml ./src/api/api.yaml && vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "buefy": "^0.8.20",
     "bulma-dashboard": "^0.3.1",
     "core-js": "^3.6.5",
+    "openapi-client-axios": "^3.4.1",
     "cytoscape": "^3.15.2",
     "cytoscape-dagre": "^2.2.2",
     "vue": "^2.6.11"
@@ -28,7 +29,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "yaml-loader": "^0.6.0"
   },
   "eslintConfig": {
     "root": true,
