--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
     "vue-template-compiler": "^2.6.11",
-    "yaml-loader": "^0.6.0"
+    "yaml-loader": "^0.6.0",
+    "lodash.clonedeep": "^4.5.0"
   },
   "eslintConfig": {
     "root": true,
