--- a/api/api.yaml
+++ b/api/api.yaml
@@ -104,10 +104,13 @@ paths:
         operationId: uploadFile
         requestBody:
           content:
-            application/octet-stream:
+            multipart/form-data:
               schema:
-                type: string
-                format: binary
+                type: object
+                properties:
+                  file:
+                    type: string
+                    format: binary
           required: true
         responses:
           200:
