Update api to contain weight field in edge, minor fixes

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -206,6 +206,8 @@ components:
               $ref: '#/components/schemas/DualType'
             key:
               $ref: '#/components/schemas/DualType'
+            weight:
+              type: number
 
     Layout:
       type: object
