--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "openapi-client-axios": "^3.4.1",
     "cytoscape": "^3.15.2",
     "cytoscape-dagre": "^2.2.2",
+    "cytoscape-springy": "^1.4.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
