--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "openapi-client-axios": "^3.4.1",
     "cytoscape": "^3.15.2",
+    "cytoscape-cola": "^2.4.0",
     "cytoscape-dagre": "^2.2.2",
     "cytoscape-springy": "^1.4.2",
     "vue": "^2.6.11"
